<resources>
    <string name="app_name">washiato</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_control">Washiato Control</string>
    <string name="title_activity_cluster">ClusterActivity</string>

    <string name="editText_username">User Name</string>
    <string name="editText_password">Password</string>

    <string name="button_confirm_login">Login</string>
    <string name="button_register">Sign Up</string>

    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="success_ctrl_activity">Success! Control Activity Launched</string>
    <string name="fail">Authentication failed</string>
    <string name="alert_nfc_on_message">This app uses NFC to link your phone with the washer/dryer you\'re using, but we need to turn it on. To use NFC, just set the phone near the washiato device.</string>
    <string name="alert_nfc_on_message_repeat">That\'s fine! To link this phone manually, you\'ll need to enter the washer/dryer ID in the text box</string>
    <string name="button_guest_login">Continue as Guest</string>
    <string name="pref_logged_in">LOGGED_IN_STATUS</string>
    <string name="pref_user_id">USER_ID</string>
    <string name="pref_nfc">DONT_USE_NFC</string>
    <string name="washiato_splash_image">washiato splash image</string>
    <string name="text_machine_open">Open</string>
    <string name="text_machine_running">Running</string>
    <string name="text_machine_finished">Finished</string>
    <string name="omw">On my way message sent!</string>
    <string name="nfc_supported">NFC_SUPPORTED</string>
    <string name="no_connection">Sorry! You are not currently connected to a machine</string>
    <string name="washiato_logo">washiato logo</string>

    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="button_create_account">Create new account</string>
    <string name="hint_enter_email">email address</string>
    <string name="reset_password">Reset password</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="error_email_required">email address required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wash_finished_flavortext">has finished washing your laundry! Go get it!</string>
    <string name="dry_finished_flavortext">has finished drying your laundry! Go get it!</string>
    <string name="wash_running_flavortext">is washing your unmentionables</string>
    <string name="dry_running_flavortext">is drying your unmentionables</string>
    <string name="machine_open_flavortext">is currently open!</string>

</resources>
