<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login">

    <!--Text field for entering user name-->
    <EditText android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:hint="@string/editText_username"
        android:textColorHint="@color/gray"
        android:text="admin@admin.com"
        android:layout_marginTop="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:singleLine="true" />

    <!--Text field for entering password (hidden when entered)-->
    <EditText android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:hint="@string/editText_password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:text="password"
        android:layout_below="@id/edit_name"
        android:layout_alignEnd="@id/edit_name"
        android:layout_alignStart="@id/edit_name"
        android:singleLine="true" />

    <!--Checkbox to allow showing/hiding of password-->
    <CheckBox
        android:id="@+id/ShowPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:buttonTint="@color/white"
        android:text="@string/show_password"
        android:textColor="@color/white"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true" />

    <!--Login confirm button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_confirm_login"
        android:onClick="confirmLogin"
        android:id="@+id/button_login"
        android:layout_below="@+id/ShowPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!--Register button-->
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_register"
        android:onClick="registerUser"
        android:layout_below="@+id/button_login"
        android:layout_alignStart="@+id/button_login" />

</RelativeLayout>

